<resources>
    <string name="app_name">Indigenous</string>
    <string name="about">About</string>
    <string name="main_menu">Main menu</string>
    <string name="no_connection">No internet connection found</string>
    <string name="no_connection_info">No internet connection\nCheck your mobile data or Wi-Fi.</string>
    <string name="delete">Delete</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="one_image">1 image</string>
    <string name="debug">Debug</string>
    <string name="go_to_main_app">Go to main app</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="reset">Reset</string>
    <string name="discard">Discard</string>
    <string name="timeline">Timeline</string>
    <string name="nav_reader">Reader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="indigenous_version">Indigenous version: %s</string>
    <string name="clipboard_error">Something went wrong to copy the text to the clipboard.</string>
    <string name="clipboard_success">Copied to clipboard</string>
    <string name="clipboard_label">Indigenous clipboard debug info</string>
    <string name="clipboard_media_url">Media url</string>
    <string name="source_post_list">Posts</string>
    <string name="save">Save</string>
    <string name="search_hint">Search posts</string>
    <string name="no_microsub_endpoint">We did not find your reader endpoint. In the accounts section, you can synchronize your account to add it. You can also just use the app for posting only.</string>
    <string name="no_micropub_endpoint">We did not find your micropub endpoint. In the accounts section, you can synchronize your account to add it.</string>
    <string name="no_micropub_media_endpoint">We did not find your media endpoint. In the accounts section, you can synchronize your account to add it.</string>
    <string name="no_micropub_endpoint_anonymous">You need to configure an endpoint in Accounts before Indigenous can post.</string>
    <string name="no_anonymous_posting">Please create an account first before you can post.</string>
    <string name="anonymous_microsub_endpoint">https://indigenous.realize.be/indieweb/microsub</string>
    <string name="anonymous_me">https://indigenous.realize.be</string>
    <string name="anonymous">Anonymous</string>
    <string name="items_refreshed">Items refreshed</string>
    <string name="request_failed">Request failed. Status code: %d; message: %s</string>
    <string name="request_failed_unknown">Request failed, unknown error</string>
    <string name="maps_info">Install a maps application to view this location</string>
    <string name="account_type_indieweb">IndieAuth</string>
    <string name="account_type_pixelfed">Pixelfed</string>
    <string name="account_type_mastodon">Mastodon</string>
    <string name="account_type_pleroma">Pleroma</string>
    <string name="accounts">Accounts</string>
    <string name="account_name">Account: %s</string>
    <string name="select_account_type">Select account type</string>
    <string name="no_user">No account found</string>
    <string name="default_user_select">Set default account</string>
    <string name="select_account">Select account</string>
    <string name="set_as_default">Set as default after authentication</string>
    <string name="select_account_info">In rare cases, the default account might not have been set or the current has connection problems. Click on the \"Select account\" button to set a default account.</string>
    <string name="url_hint">http://example.com</string>
    <string name="url_or_text_hint">URL or title</string>
    <string name="url_repository_hint">http://example.com/repository</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_indieweb">IndieWeb</string>
    <string name="sign_in_with_pixelfed">Pixelfed</string>
    <string name="sign_in_with_mastodon">Mastodon</string>
    <string name="sign_in_with_pleroma">Pleroma</string>
    <string name="error_parsing_app_registration_response">Error parsing the app registration response</string>
    <string name="sign_in_indieauth_info">This login uses IndieAuth and requires you to have a website on your domain that supports IndieAuth.\n\nThe authorization and token endpoints are required. The micropub or microsub endpoint are optional, but at least one needs to be found.</string>
    <string name="sign_in_mastodon_info">Enter the base URL of your Mastodon instance. You will be redirected to authorize on that instance.</string>
    <string name="sign_in_pixelfed_info">Enter the base URL of your Pixelfed instance. You will be redirected to authorize on that instance.</string>
    <string name="sign_in_pleroma_info">Enter the base URL of your Pleroma instance. You will be redirected to authorize on that instance.</string>
    <string name="invalid_url">This is an invalid URl</string>
    <string name="switch_account">Set</string>
    <string name="account_delete_error">Error deleting account</string>
    <string name="connecting">Connecting…</string>
    <string name="connection_to_domain">Connecting to domain, one moment</string>
    <string name="endpoints">Endpoints</string>
    <string name="title_activity_auth">Sign in</string>
    <string name="authentication_success">Authentication successful</string>
    <string name="authentication_fail">Authentication failed: Status code: %d; message: %s</string>
    <string name="authentication_fail_token">Authentication failed: %s</string>
    <string name="network_error">Network error</string>
    <string name="missing_rel_links">We did not find the necessary endpoints on your domain.</string>
    <string name="no_code_found">No code found in URL to validate</string>
    <string name="validating_code">Validating code</string>
    <string name="account_sync_done">Endpoints and metadata updated. You might need to restart the app for some changes to see effect.</string>
    <string name="account_sync_error">Error syncing: %s</string>
    <string name="domain_connect_error">Could not connect to domain: %s</string>
    <string name="default_user">Default account</string>
    <string name="account_delete_confirm">Are you sure you want to delete account %s ?</string>
    <string name="account_sync">Syncing %s</string>
    <string name="account_removed">Account %s removed</string>
    <string name="account_select">Select account</string>
    <string name="account_select_to_post">Select account to post</string>
    <string name="account_selected">Default account set to %s</string>
    <string name="account_switch">Set default account to %s ?</string>
    <string name="user_exception">We ran into an exception getting the accounts. Please manage the accounts from the device accounts section.</string>
    <string name="anonymous_settings">Anonymous settings</string>
    <string name="anonymous_info">This is the anonymous account in Indigenous. A read-only reader endpoint is available for testing:\nhttps://indigenous.realize.be/indieweb/microsub\n\nYou can change both the reader and post endpoint to a custom location so you can test yourself and even save posts on your own server without needing an IndieAuth enabled website.\n\nThe token will be send in the authentication header for both endpoints.</string>
    <string name="anonymous_info_snack">You are using the anonymous account. Create an account via "Accounts" or the "User" icon at the top.</string>
    <string name="anonymous_reader_endpoint">Reader endpoint</string>
    <string name="anonymous_post_endpoint">Post endpoint</string>
    <string name="anonymous_token">Token</string>
    <string name="anonymous_saved">Settings saved</string>
    <string name="anonymous_reset">Settings reset</string>
    <string name="reset_confirm">Reset settings?</string>
    <string name="channel_unread_items">Unread items</string>
    <string name="channel_home">Home</string>
    <string name="channel_public">Public</string>
    <string name="channel_favourites">Favourites</string>
    <string name="channel_reposts">Reposts</string>
    <string name="channel_bookmarks">Bookmarks</string>
    <string name="channel_my_posts">My posts</string>
    <string name="channel_notifications">Notifications</string>
    <string name="channel_pixelfed">Pixelfed</string>
    <string name="channel_mastodon">Mastodon</string>
    <string name="channel_pleroma">Pleroma</string>
    <string name="about_info"><![CDATA[Indigenous allows you to engage with the internet as you do on social media sites, and post on your website or a federated instance like Mastodon, Pleroma or Pixelfed. Use the built-in reader to read and respond to posts across the internet. Indigenous doesn\'t track or store any of your information. You choose a service you trust or host it yourself.<br /><br />Development happens on <a href="https://github.com/swentel/indigenous-android">GitHub</a><br />Icons from <a href="https://material.io/tools/icons/">Material Design</a> and <a href="https://www.geocaching.com">Geocaching.com</a>]]></string>
    <string name="view_changelog">View changelog</string>
    <string name="drafts">Drafts</string>
    <string name="save_as_draft">Save as draft</string>
    <string name="draft_saved">Draft saved</string>
    <string name="draft_deleted">Draft deleted</string>
    <string name="no_drafts">Everything is posted!</string>
    <string name="draft_checked">Draft is enabled but not yet saved</string>
    <string name="clear">Clear</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_confirm">Clear reader cache?</string>
    <string name="cache_cleared">Caches cleared</string>
    <string name="reader_offline">Reading offline</string>
    <string name="channel_list_refresh">Refresh channels</string>
    <string name="channels_refreshed">Channels refreshed</string>
    <string name="feed_items_refreshed">Feeds refreshed</string>
    <string name="timeline_items_refreshed">Timeline refreshed</string>
    <string name="timeline_list_refresh">Refresh timeline</string>
    <string name="channel_manage">Manage channels</string>
    <string name="mark_read">Mark read</string>
    <string name="mark_unread">Mark unread</string>
    <string name="mark_all_read">Mark all read</string>
    <string name="audio">Listen to audio</string>
    <string name="video">Watch video</string>
    <string name="map">Map view</string>
    <string name="share_post">Share</string>
    <string name="external_link">Opens this post in browser</string>
    <string name="search">Search</string>
    <string name="item_menu">More options</string>
    <string name="title">Title</string>
    <string name="published">Published</string>
    <string name="create_post">Write</string>
    <string name="add_note">Note</string>
    <string name="add_article">Article</string>
    <string name="add_reply">Reply</string>
    <string name="add_repost">Repost</string>
    <string name="add_like">Like</string>
    <string name="add_bookmark">Bookmark</string>
    <string name="add_event">Event</string>
    <string name="add_issue">Issue</string>
    <string name="add_rsvp">RSVP</string>
    <string name="add_checkin">Checkin</string>
    <string name="add_venue">Venue</string>
    <string name="add_geocache">Geocache</string>
    <string name="send">Send</string>
    <string name="add_file">Add file</string>
    <string name="add_image">Add image</string>
    <string name="add_video">Add video</string>
    <string name="add_audio">Add audio</string>
    <string name="content">Content</string>
    <string name="upload">Upload</string>
    <string name="delete_post">Delete</string>
    <string name="settings">Settings</string>
    <string name="add_location">Add location</string>
</resources>