<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/createNote"
        android:icon="@drawable/note"
        android:title="@string/add_note" />

    <item
        android:id="@+id/createArticle"
        android:icon="@drawable/article"
        android:title="@string/add_article" />

    <item
        android:id="@+id/createLike"
        android:icon="@drawable/like"
        android:title="@string/add_like" />

    <item
        android:id="@+id/createBookmark"
        android:icon="@drawable/bookmark"
        android:title="@string/add_bookmark" />

    <item
        android:id="@+id/createReply"
        android:icon="@drawable/reply"
        android:title="@string/add_reply" />

    <item
        android:id="@+id/createRepost"
        android:icon="@drawable/repost"
        android:title="@string/add_repost" />

    <item
        android:id="@+id/createEvent"
        android:icon="@drawable/event"
        android:title="@string/add_event" />

    <item
        android:id="@+id/createRSVP"
        android:icon="@drawable/rsvp"
        android:title="@string/add_rsvp" />
</menu>