<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/button_location_white"
        app:showAsAction="ifRoom"
        android:id="@+id/addLocation"
        android:title="@string/add_location" />

    <item
        android:icon="@drawable/button_attach_file"
        app:showAsAction="ifRoom"
        android:id="@+id/addFile"
        android:title="@string/add_file">

        <menu>
            <item
                android:id="@+id/addImage"
                android:title="@string/add_image" />
            <item
                android:id="@+id/addVideo"
                android:title="@string/add_video" />
            <item
                android:id="@+id/addAudio"
                android:title="@string/add_audio" />
        </menu>

    </item>

    <item
        android:icon="@drawable/button_send_white"
        app:showAsAction="ifRoom"
        android:id="@+id/send"
        android:onClick="onPostButtonClick"
        android:title="@string/send" />

</menu>